--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
       text-align: center;
       padding: 20px;
       bottom: 0;
-      margin-top: 100%;
+      margin-top: 100px;
       font-family: "Josefin Sans", sans-serif;
     }
 
